# feather

./: .gitattributes  .gitignore  .sconsign.dblite  CMakeLists.txt  LICENSE  Makefile  PROJECT.h  README.md  game  game.cpp  main.scons  sconstruct
Feather/: Main.cpp  ResourceManager.cpp  rigidentity.cpp  rigidentity.h
Feather/Components/: Collider.h  KeyboardControl.cpp  SoundEmitter.h  Sprite.cpp  Sprite.h  Transform.cpp
Feather/Debug/: Debug.cpp
Feather/Entities/: Entity.cpp
Feather/Systems/: ComponentSystem.cpp  InputManager.cpp  MovementSystem.h
Feather/Utilities/: Color.h  Rect.inl
Feather/Windows/: Window.cpp
docs/: README.md  debug.txt  entities.txt  getting_started.txt  input.txt  rigid_entities.txt  sound.txt  structure.txt  text.txt  utils.txt
example/: README  game.cpp  mouse_game.cpp
examples/: README.md
feather/: LICENSE  core.h  debug.cpp  debug.h  entity.cpp  entity.h  entitytemplate.cpp  entitytemplate.h  game.cpp  game.h  include.h  input.cpp  input.h  main.cpp  resourcemanager.cpp  resourcemanager.h  rigidentity.cpp  rigidentity.h  serial.cpp  serial.h  sound.cpp  sound.h  tag.cpp  tag.h  text.cpp  text.h  timer.cpp  timer.h  transform.cpp  transform.h  vector.cpp  vector.h  view.cpp  view.h  window.cpp  window.h
feather/components/: collider.cpp  collider.h  component.cpp  component.h  drawable.cpp  drawable.h  keyboardcontrol.cpp  keyboardcontrol.h  soundemitter.cpp  soundemitter.h  soundemmitter.cpp  soundemmitter.h  sprite.cpp  sprite.h  transform.cpp  transform.h  velocity.cpp  velocity.h
feather/debug/: debug.cpp  debug.h
feather/entities/: entity.cpp  entity.h  sharedcontext.h
feather/systems/: collisionsystem.cpp  collisionsystem.h  componentsystem.cpp  componentsystem.h  entitymanager.cpp  entitymanager.h  inputmanager..cpp  inputmanager.cpp  inputmanager.h  keyboardcontrolsystem.cpp  keyboardcontrolsystem.h  movementsystem.cpp  movementsystem.h  rendersystem.cpp  rendersystem.h
feather/utilities/: color.h  color.inl  rect.h  rect.inl  types.h  vector2.h  vector2.inl
feather/windows/: view.cpp  view.h  window.cpp  window.h
include/: README
include/Feather/: Game.cpp  Game.h  Main.cpp  ResourceManager.cpp  ResourceManager.h  text.h  util.cpp  util.h
include/Feather/Components/: AnimationComponent.cpp  AnimationComponent.h  Collider.cpp  Component.cpp  Drawable.cpp  Drawable.h  KeyboardControl.h  SoundEmitter.cpp  Sprite.cpp  Sprite.h  Transform.h  Velocity.cpp  Velocity.h
include/Feather/Entities/: Entity.cpp  Entity.h  SharedContext.h
include/Feather/Systems/: AnimationSystem.cpp  AnimationSystem.h  CollisionSystem.cpp  CollisionSystem.h  EntityManager.cpp  EntityManager.h  InputManager.h  KeyboardControlSystem.cpp  KeyboardControlSystem.h  MovementSystem.cpp  RenderSystem.cpp  RenderSystem.h
include/Feather/Utilities/: Rect.h  Rect.inl  Types.h  Vector2.h
include/Feather/Windows/: View.cpp  View.h  Window.cpp  Window.h
include/SDL2/: SDL_config.h
lib/: README
lib/Unix/lib/: libSDL2-2.0.0.dylib
lib/Unix/lib/cmake/SDL2/: sdl2-config.cmake
lib/Unix/lib/pkgconfig/: sdl2.pc
lib/Unix/lib_image/: libSDL2_image-2.0.0.dylib
lib/Unix/lib_mixer/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
lib/Unix/lib_ttf/: libSDL2_ttf-2.0.0.dylib
lib/Unix/lib_ttf/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
lib/Unix/lib_ttf/pkgconfig/: SDL2_ttf.pc
lib/lib_image/cmake/SDL2_image/: sdl2_image-config.cmake
lib/lib_image/pkgconfig/: SDL2_image.pc
lib/lib_mixer/: libSDL2_mixer-2.0.0.dylib
lib/lib_mixer/pkgconfig/: SDL2_mixer.pc
modules/: README
